# testing-tauri

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
app/: app.css  root.tsx  routes.ts
app/components/: BouncingRedArrowForNoGoodReason.tsx  ThemeToggle.tsx
app/hooks/: useTheme.ts
app/providers/: ThemeProvider.tsx
app/screens/: hello.tsx  home.tsx
scripts/: rrs.js  serve.js  start-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
